# WSN_Integrated_Firmware

./: .gitmodules  README.md  main.c  main.cpp
esp_project/instructions/: extract_docs.py
esp_project/instructions/extracted/: IT22069122.txt  IT22088000.txt  IT22360496.txt  IT22564986.txt  Proposal Presentation_25-26J-010.txt  TAF_25-26J-010.txt
esp_project/ms_node/: CMakeLists.txt  DATA_FORMAT.md  DATA_STORAGE.md  README.md  SENSORS.md  check_cluster.py  devices.example.yaml  devices.yaml  full_log.txt  get_cluster_data.py  logs.json  logs_new.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp_project/ms_node/components/sensors/: CMakeLists.txt
esp_project/ms_node/components/sensors/include/: aht21_sensor.h  bme280_sensor.h  ens160_sensor.h  gy271_sensor.h  i2c_bus.h  ina219_sensor.h  inmp441_sensor.h  sensor_config.h  sensors.h
esp_project/ms_node/components/sensors/src/: aht21_sensor.c  bme280_sensor.c  ens160_sensor.c  gy271_sensor.c  i2c_bus.c  ina219_sensor.c  inmp441_sensor.c  sensor_config.c  sensors.c
esp_project/ms_node/main/: CMakeLists.txt  auth.c  auth.h  ble_beacon.c  ble_beacon.h  ble_gatt_service.c  ble_gatt_service.h  ble_manager.c  compression_bench.c  config.h  election.c  election.h  esp_now_manager.c  led_manager.c  (+9 more)
esp_project/tools/: capture_uart_log.py  device_manager.py  generate_test_log.py  log_parser.py  serial_capture.py
main/: CMakeLists.txt  auth.c  ble_manager.h  config.h  election.c  esp_now_manager.h  idf_component.yml  led_manager.c  main.c  metrics.c  neighbor_manager.h  persistence.c  state_machine.c
(+95 files in other folders)
